--- a/playground/basic/src/views/home.html
+++ b/playground/basic/src/views/home.html
@@ -1,5 +1,5 @@
 <script data-svelte>
-    import Footer from './footer.html'
+  import Footer from "./footer.html";
 </script>
 
 <!DOCTYPE html>
@@ -7,18 +7,20 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.scss">
+    <link rel="stylesheet" href="style.scss" />
     <title>Home</title>
   </head>
   <body>
-    <img src="/favicon.png" alt="">
+    <img src="/favicon.png" alt="" />
     <div>
-        <p>Hello</p>
+      <p>Hello</p>
     </div>
 
-    <img src='./img.png' />
+    <img src="./img.png" />
 
     <Footer />
+    
     <script type="module" src="./app.ts"></script>
+    <script type="module" src="/service-worker.js"></script>
   </body>
 </html>
